Stop logo overhanging bottom of navbar on mobile

--- a/resources/main.css
+++ b/resources/main.css
@@ -195,7 +195,7 @@ h1 {
   font-family: "Gill Sans W01 Book";
   font-size: 22px;
   margin: -4px 0 0 -3px;
-  padding: 4px 0 4px 4px;
+  padding: 4px 0 3px 4px;
   color: white;
   background-color: black;
   width: 110px;
